# bpmn-onto

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
.wolf/: anatomy.md  cerebrum.md  identity.md  token-ledger.json
docs/: state.md
examples/tier1-structural/: A.2.0-gateway-split-merge.bpmn  A.4.1-collaboration-pools.bpmn  C.6.0-event-subprocess.bpmn
examples/tier2-domain/: camunda-order-boundary-event.bpmn  pizza-order-to-cash.bpmn
examples/tier3-handcrafted/: manufacturing-work-order.bpmn
src/bpmn_onto/: __init__.py  cli.py
